Implementation of Services
Changed strategy from generated.ts for compatibility problems with the file generated.
Implementations of proper integration with he proper pages will be next
